[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "(Namada fork) Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "nam-jubjub"
repository = "https://github.com/anoma/jubjub"
version = "0.10.1-nam.1"
edition = "2024"

[dependencies.arbitrary]
version = "1.3"
features = ["derive"]
optional = true

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.bls12_381]
package = "nam-blstrs"
version = "0.7.1-nam.0"
#version = "0.7.1"
default-features = false

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies]
criterion = "0.3"
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["alloc", "bits"]
alloc = ["ff/alloc", "group/alloc"]
bits = ["ff/bits"]
arbitrary = ["dep:arbitrary", "bls12_381/arbitrary"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
